# wasm-game-of-life

./: Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
docs/: index.html
docs/assets/: index-aefd6fbe.js  index-c8610a7a.js  wasm_game_of_life_bg-b7270621.wasm
src/: lib.rs  utils.rs
tests/: web.rs
vite-wasm/: index.html  package.json  vite.config.ts
vite-wasm/src/: main.ts
