[package]
name = "wasm-game-of-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.64"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.37"
web-sys = { version = "0.3.64", features = ["Window","console"] }


[lib]
crate-type = ["cdylib", "rlib"]
